[package]
name = "judger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgroups-rs = "0.2.9"
libc = "0.2"
rlimit = "0.8.3"
seccompiler = "0.2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = {version = "1",features = ["io-util","sync","full"]}
thiserror = "1"
anyhow = "1"
clap = {version = "3",features=["derive"]}
log = "0"
tokio-tungstenite = "0"
async-trait = "0"
futures-util = "0"
fd-lock = "3"
fs4 = {version = "0" , features = ['tokio-async']}
toml = "0"
base64 = "0"
interprocess = "1"
futures = "0"
simple_logger = "2"
num_cpus = "1"

[dependencies.uuid]
version = "1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[profile.release]
lto = "fat"
