[package]
edition = "2021"
name = "judge"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0"
base64 = "0"
cgroups-rs = "0.2.9"
clap = {version = "3", features = ["derive"]}
env_logger = "0.9.1"
fd-lock = "3"
fs4 = {version = "0", features = ['tokio-async']}
futures = "0"
futures-util = "0"
interprocess = "1"
libc = "0.2"
log = "0"
num_cpus = "1"
rlimit = "0.8.3"
seccompiler = "0.2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1"
tokio = {version = "1", features = ["io-util", "sync", "full"]}
tokio-tungstenite = "0"
toml = "0"

[dependencies.uuid]
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
version = "1"

[profile.release]
lto = "fat"
